# SSDMMCStore

./: .gitignore  CMakeLists.txt  kvs_log.txt  main.c
config/: mmc.cfg  ssd.cfg
include/: kv_store.h  kvs.h
src/common/: common.c  common.h
src/key_value_store/: kv_store.c  kv_store.h  kv_store_internal.c  kv_store_internal.h  kvs.c  kvs_init.c  kvs_init.h  kvs_internal.c  kvs_internal.h  kvs_internal_io.c  kvs_internal_io.h  kvs_metadata.c  kvs_metadata.h  kvs_types.h  kvs_valid.c  kvs_valid.h
src/ssdmmc_sim/: ssdmmc_sim.c  ssdmmc_sim.h  ssdmmc_sim_info.c  ssdmmc_sim_internal.h
tests/: kvs_test_wrappers.c  kvs_test_wrappers.h  test1_happy_flow.c  test2_corruption.c  test3_power_failure.c  test4_gc_cleanup.c  test4_gc_evacuation.c
